[gd_scene load_steps=4 format=3 uid="uid://1sqybgtfo883"]

[ext_resource type="Script" uid="uid://rseuyae4vmup" path="res://scenes/tiles/spawner.gd" id="1_fx4f6"]
[ext_resource type="AudioStream" uid="uid://c32iwctrk5021" path="res://sounds/ding.wav" id="3_gva8i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owfmj"]
size = Vector2(16, 16)

[node name="Spawner" type="StaticBody2D"]
script = ExtResource("1_fx4f6")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_owfmj")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gva8i")
volume_db = -13.0
bus = &"Sound"

[node name="CastPoint" type="Node2D" parent="."]
position = Vector2(0, -16)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
